added homework_25_02 unitest